--- a/package.json
+++ b/package.json
@@ -15,9 +15,15 @@
         "url": "https://github.com/kevinwang/questkey.git"
     },
     "dependencies": {
+        "bcrypt": "0.8.x",
+        "body-parser": "1.12.x",
+        "connect-sqlite3": "0.9.x",
         "express": "4.11.x",
+        "express-session": "1.10.x",
         "jade": "1.9.x",
         "nodemon": "1.3.x",
+        "passport": "0.2.x",
+        "passport-local": "1.0.x",
         "sequelize": "2.0.x",
         "sqlite3": "3.0.x",
         "underscore": "1.7.x"
