--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
         "url": "https://github.com/kevinwang/questkey.git"
     },
     "dependencies": {
+        "async": "0.9.x",
         "bcrypt": "0.8.x",
         "body-parser": "1.12.x",
         "connect-sqlite3": "0.9.x",
